--- a/commons/src/main/AndroidManifest.xml
+++ b/commons/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.apelgigit.common_ui">
+    package="com.apelgigit.commons">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
