--- a/features/build.gradle
+++ b/features/build.gradle
@@ -11,4 +11,6 @@ dependencies {
     implementation Libs.Android.constrainLayout
     implementation project(Modules.navigation)
     implementation project(Modules.commons)
+    implementation project(Modules.domain)
+    implementation project(Modules.data)
 }
