--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation project(Modules.commons)
     implementation project(Modules.data)
     implementation project(Modules.domain)
+    implementation project(Modules.home)
 
 }
