--- a/features/build.gradle
+++ b/features/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation Libs.Kotlin.core
     implementation Libs.Android.appcompat
     implementation Libs.Android.materialDesign
+    implementation Libs.Android.swipeRefresh
     implementation Libs.Android.constrainLayout
     implementation project(Modules.navigation)
     implementation project(Modules.commons)
