--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -5,6 +5,7 @@ apply from: "$rootDir/commons.gradle"
 
 dependencies {
     implementation Libs.Kotlin.stdLib
+    implementation Libs.Android.swipeRefresh
     implementation Libs.Kotlin.core
     implementation Libs.Android.appcompat
     implementation Libs.Android.materialDesign
